; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_swfdec.c_swf_probe.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_swfdec.c_swf_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8* }

@.str = private unnamed_addr constant [4 x i8] c"CWS\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"FWS\00", align 1
@AVPROBE_SCORE_MAX = common dso_local global i32 0, align 4
@AVPROBE_SCORE_EXTENSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @swf_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @swf_probe(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = icmp slt i32 %12, 15
  br i1 %13, label %14, label %15

14:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %109

15:                                               ; preds = %1
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i8*, i8** %17, align 8
  %19 = call i64 @AV_RB24(i8* %18)
  %20 = call i64 @AV_RB24(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %30

22:                                               ; preds = %15
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 1
  %25 = load i8*, i8** %24, align 8
  %26 = call i64 @AV_RB24(i8* %25)
  %27 = call i64 @AV_RB24(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %22
  store i32 0, i32* %2, align 4
  br label %109

30:                                               ; preds = %22, %15
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 1
  %33 = load i8*, i8** %32, align 8
  %34 = call i64 @AV_RB24(i8* %33)
  %35 = call i64 @AV_RB24(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %49

37:                                               ; preds = %30
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  %40 = load i8*, i8** %39, align 8
  %41 = getelementptr inbounds i8, i8* %40, i64 3
  %42 = load i8, i8* %41, align 1
  %43 = sext i8 %42 to i32
  %44 = icmp sle i32 %43, 20
  br i1 %44, label %45, label %49

45:                                               ; preds = %37
  %46 = load i32, i32* @AVPROBE_SCORE_MAX, align 4
  %47 = sdiv i32 %46, 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %2, align 4
  br label %109

49:                                               ; preds = %37, %30
  %50 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %51 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %50, i32 0, i32 1
  %52 = load i8*, i8** %51, align 8
  %53 = getelementptr inbounds i8, i8* %52, i64 3
  %54 = bitcast i8* %53 to i32*
  %55 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %56 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = sub nsw i32 %57, 3
  %59 = call i64 @init_get_bits8(i32* %4, i32* %54, i32 %58)
  %60 = icmp slt i64 %59, 0
  br i1 %60, label %61, label %62

61:                                               ; preds = %49
  store i32 0, i32* %2, align 4
  br label %109

62:                                               ; preds = %49
  %63 = call i32 @skip_bits(i32* %4, i32 40)
  %64 = call i32 @get_bits(i32* %4, i32 5)
  store i32 %64, i32* %5, align 4
  %65 = load i32, i32* %5, align 4
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %68, label %67

67:                                               ; preds = %62
  store i32 0, i32* %2, align 4
  br label %109

68:                                               ; preds = %62
  %69 = load i32, i32* %5, align 4
  %70 = call i32 @get_bits_long(i32* %4, i32 %69)
  store i32 %70, i32* %6, align 4
  %71 = load i32, i32* %5, align 4
  %72 = call i32 @get_bits_long(i32* %4, i32 %71)
  store i32 %72, i32* %7, align 4
  %73 = load i32, i32* %5, align 4
  %74 = call i32 @get_bits_long(i32* %4, i32 %73)
  store i32 %74, i32* %8, align 4
  %75 = load i32, i32* %5, align 4
  %76 = call i32 @get_bits_long(i32* %4, i32 %75)
  store i32 %76, i32* %9, align 4
  %77 = load i32, i32* %6, align 4
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %88, label %79

79:                                               ; preds = %68
  %80 = load i32, i32* %8, align 4
  %81 = icmp ne i32 %80, 0
  br i1 %81, label %88, label %82

82:                                               ; preds = %79
  %83 = load i32, i32* %7, align 4
  %84 = icmp ne i32 %83, 0
  br i1 %84, label %85, label %88

85:                                               ; preds = %82
  %86 = load i32, i32* %9, align 4
  %87 = icmp ne i32 %86, 0
  br i1 %87, label %89, label %88

88:                                               ; preds = %85, %82, %79, %68
  store i32 0, i32* %2, align 4
  br label %109

89:                                               ; preds = %85
  %90 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %91 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %90, i32 0, i32 1
  %92 = load i8*, i8** %91, align 8
  %93 = getelementptr inbounds i8, i8* %92, i64 3
  %94 = load i8, i8* %93, align 1
  %95 = sext i8 %94 to i32
  %96 = icmp sge i32 %95, 20
  br i1 %96, label %103, label %97

97:                                               ; preds = %89
  %98 = load i32, i32* %7, align 4
  %99 = icmp slt i32 %98, 16
  br i1 %99, label %103, label %100

100:                                              ; preds = %97
  %101 = load i32, i32* %9, align 4
  %102 = icmp slt i32 %101, 16
  br i1 %102, label %103, label %106

103:                                              ; preds = %100, %97, %89
  %104 = load i32, i32* @AVPROBE_SCORE_MAX, align 4
  %105 = sdiv i32 %104, 4
  store i32 %105, i32* %2, align 4
  br label %109

106:                                              ; preds = %100
  %107 = load i32, i32* @AVPROBE_SCORE_EXTENSION, align 4
  %108 = add nsw i32 %107, 1
  store i32 %108, i32* %2, align 4
  br label %109

109:                                              ; preds = %106, %103, %88, %67, %61, %45, %29, %14
  %110 = load i32, i32* %2, align 4
  ret i32 %110
}

declare dso_local i64 @AV_RB24(i8*) #1

declare dso_local i64 @init_get_bits8(i32*, i32*, i32) #1

declare dso_local i32 @skip_bits(i32*, i32) #1

declare dso_local i32 @get_bits(i32*, i32) #1

declare dso_local i32 @get_bits_long(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
